--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "5.4.2",
   "author": "Donald Boulton",
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
